# lexide

./: .gitattributes  .gitignore  README.md
.claude/: settings.local.json
lexide/: Cargo.toml  README.md
lexide/.claude/: settings.local.json
lexide/examples/: concurrent.rs  matching.rs  simple.rs
lexide/src/: dep.rs  language.rs  lib.rs  local.rs  parsing.rs  pos.rs  remote.rs
lexide/src/matching/: aho_corasick.rs  dependency_matcher.rs  lemma_matcher.rs  mod.rs  text_matcher.rs
modal/: README.md  modal_serve.py
train/: MERGE_LORA.md  check_tokenization.py  inference_example.py  launch_training.sh  main.py  merge_lora.py  pyproject.toml  sky.yaml  test_checkpoint.py  test_token_efficiency.py
train/data/: cleaned_kor.jsonl
train/src/: data_loader.py  evaluate.py  inference.py  train.py
