[package]
name = "lexide"
version = "0.1.0"
edition = "2021"

[lib]
name = "lexide"
path = "src/lib.rs"

[dependencies]
# Core dependencies
tokio = { version = "1.42", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
serde_plain = "1.0.2"
futures = "0.3.31"
regex = "1.0"
unicode-normalization = "0.1"

# Local inference dependencies (only included with 'local' feature)
mistralrs = { git = "https://github.com/anchpop/mistral.rs.git", rev = "3c296725d1c8604f0954e3b7453abec0ce09a536", optional = true }
mistralrs-core = { git = "https://github.com/anchpop/mistral.rs.git", rev = "3c296725d1c8604f0954e3b7453abec0ce09a536", optional = true }

# Remote inference dependencies (only included with 'remote' feature)
reqwest = { version = "0.12", features = ["json"], optional = true }

[features]
# Backend selection - choose one
local = ["dep:mistralrs", "dep:mistralrs-core"]
remote = ["dep:reqwest"]

# Hardware acceleration features (only applicable with 'local' feature)
cuda = ["local", "mistralrs-core/cuda", "mistralrs/cuda"]
cudnn = ["local", "mistralrs-core/cudnn", "mistralrs/cudnn"]
metal = ["local", "mistralrs-core/metal", "mistralrs/metal"]
flash-attn = ["cuda", "mistralrs-core/flash-attn", "mistralrs/flash-attn"]
accelerate = ["local", "mistralrs-core/accelerate", "mistralrs/accelerate"]
mkl = ["local", "mistralrs-core/mkl", "mistralrs/mkl"]
nccl = ["local", "mistralrs-core/nccl", "mistralrs/nccl"]
ring = ["local", "mistralrs-core/ring", "mistralrs/ring"]
